summative.moria.Moria.scala.code
while (estDosMur()==false){
  while(!estSurBiscuit() && !estDosMur(){
    recule()
  }
  prendBiscuit()
  while(estSurBiscuit()==false){
    if(estDosMur){droite();avance();droite();avance()}
    avance()
  }
  recule()
  poseBiscuit()
  recule()
}
droite();avance();droite();avance()